--- a/index.html
+++ b/index.html
@@ -133,22 +133,31 @@
             </div>
             <div class="bloc">
                 <h2><i class="fa-solid fa-xl fa-hat-wizard"></i> Centres d'intérêt</h2>
-                <section class="text-center">
+                <div class="text-center">
                     <div class="justify-sb">
-                        <img class="customIcon" src="https://img.icons8.com/ios-filled/50/000000/paragliding.png" alt="paragliding" />
-                        <img class="customIcon" src="https://img.icons8.com/ios-filled/50/000000/discord-logo.png" alt="discord"/>
-                        <img class="customIcon" src="https://img.icons8.com/material-outlined/50/000000/twitch.png" alt="twitch"/>
-                        <img class="customIcon" src="https://img.icons8.com/ios/50/1A1A1A/board-game.png" alt="board game"/>
-                        <img class="customIcon" src="https://img.icons8.com/ios-filled/50/1A1A1A/pacman.png" alt="video games" />
+                        <img class="customIcon" src="https://img.icons8.com/ios-filled/50/000000/paragliding.png"
+                            alt="paragliding" />
+                        <img class="customIcon" src="https://img.icons8.com/ios-filled/50/000000/discord-logo.png"
+                            alt="discord" />
+                        <img class="customIcon" src="https://img.icons8.com/material-outlined/50/000000/twitch.png"
+                            alt="twitch" />
+                        <img class="customIcon" src="https://img.icons8.com/ios/50/1A1A1A/board-game.png"
+                            alt="board game" />
+                        <img class="customIcon" src="https://img.icons8.com/ios-filled/50/1A1A1A/pacman.png"
+                            alt="video games" />
                         <img class="customIcon"
-                            src="https://img.icons8.com/external-vitaliy-gorbachev-fill-vitaly-gorbachev/50/1A1A1A/external-coding-online-learning-vitaliy-gorbachev-fill-vitaly-gorbachev.png" alt="coding"/>
+                            src="https://img.icons8.com/external-vitaliy-gorbachev-fill-vitaly-gorbachev/50/1A1A1A/external-coding-online-learning-vitaliy-gorbachev-fill-vitaly-gorbachev.png"
+                            alt="coding" />
                         <img class="customIcon"
-                            src="https://img.icons8.com/ios-glyphs/50/1A1A1A/cycling-mountain-bike--v1.png" alt="biking"/>
-                        <img class="customIcon" src="https://img.icons8.com/pastel-glyph/50/1A1A1A/cat--v1.png" alt="animals"/>
+                            src="https://img.icons8.com/ios-glyphs/50/1A1A1A/cycling-mountain-bike--v1.png"
+                            alt="biking" />
+                        <img class="customIcon" src="https://img.icons8.com/pastel-glyph/50/1A1A1A/cat--v1.png"
+                            alt="animals" />
                     </div>
-                </section>
+                </div>
             </div>
         </div>
+    </div>
 </body>
 
 </html>
