--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </div>
             <div class="bloc">
                 <h2><i class="fa-solid fa-xl fa-hat-wizard"></i> Centres d'intérêt</h2>
-                <div class="text-center">
+                <div class="icons" class="text-center">
                     <div class="justify-sb">
                         <img class="customIcon" src="https://img.icons8.com/ios-filled/50/000000/paragliding.png"
                             alt="paragliding" />
