--- a/index.html
+++ b/index.html
@@ -10,151 +10,144 @@
     <title>Mazarine Hajduk</title>
 </head>
 
-<body>
-    <div class="row">
-        <div class="left">
-            <div class="top">
-                <div class="titre">
-                    <h1>Hajduk Mazarine</h1>
-                    <p>Développeuse web</p>
-                </div>
-                <img src="img.jpg" alt="photo de profil Mazarine Hajduk">
+<body class="row">
+    <div class="left">
+        <div class="top">
+            <div class="titre">
+                <h1>Hajduk Mazarine</h1>
+                <p>Développeuse web</p>
             </div>
-            <div class="sidebar">
-                <div class="categ">
-                    <p class="icon"><i class="fa-solid fa-xl fa-circle-user"></i></p>
-                    <div class="text">
-                        <p>Passionnée par l'informatique, j'ai décidé de me reconvertir dans le développement web suite
-                            à mes études de domotique. J'aime apprendre de nouvelles choses et découvrir de nombreuses
-                            technologies. Les challenges et les projets complexes me motivent encore plus à me surpasser
-                            et à progresser dans mon travail.</p>
-                    </div>
+            <img src="img.jpg" alt="photo de profil Mazarine Hajduk">
+        </div>
+        <div class="sidebar">
+            <div class="categ">
+                <p class="icon"><i class="fa-solid fa-xl fa-circle-user"></i></p>
+                <div class="text">
+                    <p>Passionnée par l'informatique, j'ai décidé de me reconvertir dans le développement web suite
+                        à mes études de domotique. J'aime apprendre de nouvelles choses et découvrir de nombreuses
+                        technologies. Les challenges et les projets complexes me motivent encore plus à me surpasser
+                        et à progresser dans mon travail.</p>
                 </div>
-                <div class="categ">
-                    <p class="icon"><i class="fa-solid fa-xl fa-phone"></i></p>
-                    <div class="text">
-                        <p>+336 ** ** ** **</p>
-                    </div>
+            </div>
+            <div class="categ">
+                <p class="icon"><i class="fa-solid fa-xl fa-phone"></i></p>
+                <div class="text">
+                    <p>+336 ** ** ** **</p>
                 </div>
-                <div class="categ">
-                    <p class="icon"><i class="fa-solid fa-xl fa-envelope"></i></p>
-                    <div class="text">
-                        <p>***********@gmail.com</p>
-                    </div>
+            </div>
+            <div class="categ">
+                <p class="icon"><i class="fa-solid fa-xl fa-envelope"></i></p>
+                <div class="text">
+                    <p>***********@gmail.com</p>
                 </div>
-                <div class="categ">
-                    <p class="icon"><i class="fa-solid fa-xl fa-map-location-dot"></i></p>
-                    <div class="text">
-                        <p>**********************</p>
-                        <p>***** - **************</p>
-                    </div>
+            </div>
+            <div class="categ">
+                <p class="icon"><i class="fa-solid fa-xl fa-map-location-dot"></i></p>
+                <div class="text">
+                    <p>**********************</p>
+                    <p>***** - **************</p>
                 </div>
-                <div class="categ">
-                    <p class="icon"><i class="fa-solid fa-xl fa-clipboard"></i></p>
-                    <div class="text">
-                        <p><b>Frontend:</b></p>
-                        <ul>
-                            <li>HTML5</li>
-                            <li>CSS3</li>
-                            <li>SCSS</li>
-                            <li>SASS</li>
-                            <li>Bootstrap</li>
-                            <li>JavaScript</li>
-                            <li>jQuery</li>
-                        </ul>
-                        <br>
-                        <p><b>Backend:</b></p>
-                        <ul>
-                            <li>SQL</li>
-                            <li>PHP</li>
-                            <li>Java</li>
-                        </ul>
-                    </div>
+            </div>
+            <div class="categ">
+                <p class="icon"><i class="fa-solid fa-xl fa-clipboard"></i></p>
+                <div class="text">
+                    <p><b>Frontend:</b></p>
+                    <ul>
+                        <li>HTML5</li>
+                        <li>CSS3</li>
+                        <li>SCSS</li>
+                        <li>SASS</li>
+                        <li>Bootstrap</li>
+                        <li>JavaScript</li>
+                        <li>jQuery</li>
+                    </ul>
+                    <br>
+                    <p><b>Backend:</b></p>
+                    <ul>
+                        <li>SQL</li>
+                        <li>PHP</li>
+                        <li>Java</li>
+                    </ul>
                 </div>
-                <div class="categ">
-                    <p class="icon"><i class="fa-solid fa-xl fa-gear"></i></p>
-                    <div class="text">
-                        <p><b>Technologies:</b></p>
-                        <ul>
-                            <li>MySQL</li>
-                            <li>Symfony</li>
-                        </ul>
-                    </div>
+            </div>
+            <div class="categ">
+                <p class="icon"><i class="fa-solid fa-xl fa-gear"></i></p>
+                <div class="text">
+                    <p><b>Technologies:</b></p>
+                    <ul>
+                        <li>MySQL</li>
+                        <li>Symfony</li>
+                    </ul>
                 </div>
-                <div class="categ">
-                    <p class="icon"><i class="fa-brands fa-xl fa-github"></i></p>
-                    <div class="text">
-                        <p><a href="https://github.com/Piotezaza">Github</a></p>
-                    </div>
+            </div>
+            <div class="categ">
+                <p class="icon"><i class="fa-brands fa-xl fa-github"></i></p>
+                <div class="text">
+                    <p><a href="https://github.com/Piotezaza">Github</a></p>
                 </div>
-                <div class="categ">
-                    <p class="icon"><i class="fa-solid fa-xl fa-globe"></i></p>
-                    <div class="text">
-                        <p><a href="https://www.piotezaza.fr">Site web</a></p>
-                    </div>
+            </div>
+            <div class="categ">
+                <p class="icon"><i class="fa-solid fa-xl fa-globe"></i></p>
+                <div class="text">
+                    <p><a href="https://www.piotezaza.fr">Site web</a></p>
                 </div>
             </div>
         </div>
-        <div class="right">
-            <div class="bloc">
-                <h2><i class="fa-solid fa-xl fa-check-double"></i> Expériences</h2>
-                <section>
-                    <h3>Banque Internationale à Luxembourg (BIL)</h3>
-                    <p>Associate Application Software Engineer</p>
-                    <p><small>AVRIL 2019 - AOÛT 2021 (2 ANS 5 MOIS)</small></p>
-                    <p><i>Luxembourg</i></p>
-                </section>
-                <section>
-                    <h3>Action</h3>
-                    <p>Intérimaire</p>
-                    <p><small>FÉVRIER 2018 - MARS 2018 (2 MOIS)</small></p>
-                    <p><i>Terville</i></p>
-                </section>
-                <section>
-                    <h3>Technicien Commercial</h3>
-                    <p>Domot</p>
-                    <p><small>DÉC. 2016 - MARS 2017 (4 MOIS)</small></p>
-                    <p><i>Florange</i></p>
-                </section>
+    </div>
+    <div class="right">
+        <div class="bloc">
+            <h2><i class="fa-solid fa-xl fa-check-double"></i> Expériences</h2>
+            <section>
+                <h3>Banque Internationale à Luxembourg (BIL)</h3>
+                <p>Associate Application Software Engineer</p>
+                <p><small>AVRIL 2019 - AOÛT 2021 (2 ANS 5 MOIS)</small></p>
+                <p><i>Luxembourg</i></p>
+            </section>
+            <section>
+                <h3>Action</h3>
+                <p>Intérimaire</p>
+                <p><small>FÉVRIER 2018 - MARS 2018 (2 MOIS)</small></p>
+                <p><i>Terville</i></p>
+            </section>
+            <section>
+                <h3>Technicien Commercial</h3>
+                <p>Domot</p>
+                <p><small>DÉC. 2016 - MARS 2017 (4 MOIS)</small></p>
+                <p><i>Florange</i></p>
+            </section>
 
-            </div>
-            <div class="bloc">
-                <h2><i class="fa-solid fa-xl fa-graduation-cap"></i> Études</h2>
-                <section>
-                    <h3>OpenClassrooms</h3>
-                    <p>Développeur d'application Java</p>
-                    <p><small>SEPT. 2022</small></p>
-                </section>
-                <section>
-                    <h3>NumericALL</h3>
-                    <p>Formation WebForce3, Développement web</p>
-                    <p><small>2018</small></p>
-                </section>
-            </div>
-            <div class="bloc">
-                <h2><i class="fa-solid fa-xl fa-hat-wizard"></i> Centres d'intérêt</h2>
-                <div class="icons" class="text-center">
-                    <div class="justify-sb">
-                        <img class="customIcon" src="https://img.icons8.com/ios-filled/50/000000/paragliding.png"
-                            alt="paragliding" />
-                        <img class="customIcon" src="https://img.icons8.com/ios-filled/50/000000/discord-logo.png"
-                            alt="discord" />
-                        <img class="customIcon" src="https://img.icons8.com/material-outlined/50/000000/twitch.png"
-                            alt="twitch" />
-                        <img class="customIcon" src="https://img.icons8.com/ios/50/1A1A1A/board-game.png"
-                            alt="board game" />
-                        <img class="customIcon" src="https://img.icons8.com/ios-filled/50/1A1A1A/pacman.png"
-                            alt="video games" />
-                        <img class="customIcon"
-                            src="https://img.icons8.com/external-vitaliy-gorbachev-fill-vitaly-gorbachev/50/1A1A1A/external-coding-online-learning-vitaliy-gorbachev-fill-vitaly-gorbachev.png"
-                            alt="coding" />
-                        <img class="customIcon"
-                            src="https://img.icons8.com/ios-glyphs/50/1A1A1A/cycling-mountain-bike--v1.png"
-                            alt="biking" />
-                        <img class="customIcon" src="https://img.icons8.com/pastel-glyph/50/1A1A1A/cat--v1.png"
-                            alt="animals" />
-                    </div>
-                </div>
+        </div>
+        <div class="bloc">
+            <h2><i class="fa-solid fa-xl fa-graduation-cap"></i> Études</h2>
+            <section>
+                <h3>OpenClassrooms</h3>
+                <p>Développeur d'application Java</p>
+                <p><small>SEPT. 2022</small></p>
+            </section>
+            <section>
+                <h3>NumericALL</h3>
+                <p>Formation WebForce3, Développement web</p>
+                <p><small>2018</small></p>
+            </section>
+        </div>
+        <div class="bloc">
+            <h2><i class="fa-solid fa-xl fa-hat-wizard"></i> Centres d'intérêt</h2>
+            <div class="icons justify-sb">
+                <img class="customIcon" src="https://img.icons8.com/ios-filled/50/000000/paragliding.png"
+                    alt="paragliding" />
+                <img class="customIcon" src="https://img.icons8.com/ios-filled/50/000000/discord-logo.png"
+                    alt="discord" />
+                <img class="customIcon" src="https://img.icons8.com/material-outlined/50/000000/twitch.png"
+                    alt="twitch" />
+                <img class="customIcon" src="https://img.icons8.com/ios/50/1A1A1A/board-game.png" alt="board game" />
+                <img class="customIcon" src="https://img.icons8.com/ios-filled/50/1A1A1A/pacman.png"
+                    alt="video games" />
+                <img class="customIcon"
+                    src="https://img.icons8.com/external-vitaliy-gorbachev-fill-vitaly-gorbachev/50/1A1A1A/external-coding-online-learning-vitaliy-gorbachev-fill-vitaly-gorbachev.png"
+                    alt="coding" />
+                <img class="customIcon" src="https://img.icons8.com/ios-glyphs/50/1A1A1A/cycling-mountain-bike--v1.png"
+                    alt="biking" />
+                <img class="customIcon" src="https://img.icons8.com/pastel-glyph/50/1A1A1A/cat--v1.png" alt="animals" />
             </div>
         </div>
     </div>
